--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Zhengtao Gui"
+title                    : "Your Name / Site Title"
 title_separator          : "-"
-name                     : &name "Zhengtao Gui"
+name                     : &name "Your Name"
 description              : &description "personal description"
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
+repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -78,9 +80,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Zhengtao Gui"
-  avatar           : "myself.jpg"
-  bio              : "Taken in front of my department"
+  name             : "Your Sidebar Name"
+  avatar           : "profile.png"
+  bio              : "Your biography for the left-hand sidebar"
+  location         : "Location"
+  employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "http://yourfullgooglescholarurl.com"
   email            :
