--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "ZhengtaoGui"
-  avatar           : "profile.png"
+  avatar           : "me.jpg"
   bio              : "Taken in front of my department"
   location         : "Location"
   employer         :
