--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "ZhengtaoGui"
   avatar           : "me.png"
-  bio              : "Taken in front of my department"
+  bio              : "Taken in July 2023"
   location         : "Location"
   employer         :
   pubmed           : 
