--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
   - title: "Study"
     url: /portfolio/
         
-  - title: "Activities"
+  - title: "Extracurricular"
     url: /year-archive/
     
   # - title: "CV"
